[package]
name = "butteraugli-cuda"
version = "0.1.0"
description = "Butteraugli implementation running on CUDA"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.77"

[dependencies]
array-init = { workspace = true }
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ial", "idei", "if", "ist"] }
indices = { workspace = true }

[build-dependencies]
nvptx-builder = { workspace = true }

[dev-dependencies]
zune-image = { workspace = true, features = ["png", "jpeg", "simd", "metadata"] }
zune-core = { workspace = true }
butteraugli = { path = "/home/lilith/work/butteraugli/butteraugli", features = ["internals"] }
imgref = "1.9"
rgb = "0.8"
sha2 = "0.10"

[features]
default = ["static"]
# Static linking against cuda libraries
static = ["cudarse-driver/static", "cudarse-npp/static"]
