[package]
name = "dssim-cuda"
version = "0.1.0"
description = "DSSIM image quality metric - CUDA implementation"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu", "ial", "idei", "if", "ist"] }
array-init = { workspace = true }

[features]
default = ["static"]
static = ["cudarse-driver/static", "cudarse-npp/static"]

[build-dependencies]
nvptx-builder = { workspace = true }

[dev-dependencies]
zune-image = { workspace = true, features = ["png", "jpeg", "simd", "metadata"] }
zune-core = { workspace = true }
dssim-core = { workspace = true }
imgref = "1"
rgb = "0.8"
