[package]
name = "zensim-cuda"
version = "0.1.0"
description = "zensim (perceptual image similarity) running on CUDA"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT"
rust-version = "1.92"

[dependencies]
cudarse-driver = { workspace = true }
cudarse-npp = { workspace = true, features = ["isu"] }
array-init = { workspace = true }

[build-dependencies]
nvptx-builder = { workspace = true }

[features]
default = ["static"]
static = ["cudarse-driver/static", "cudarse-npp/static"]
